# r-temp

./: README.md  template.yaml
skeleton/: Makefile  README.md  catalog-info.yaml  pyproject.toml
skeleton/src/: __version__.py
